# budget-cli

./: README.md  pyproject.toml
src/budget_cli/: __init__.py  budget_cli.py
